bindings/c/whiteout_mdx.h

typedef struct whiteout_MdxNode whiteout_MdxNode;
typedef struct whiteout_MdxSoundEmitter whiteout_MdxSoundEmitter;
typedef struct whiteout_MdxTrackVector3f whiteout_MdxTrackVector3f;
typedef struct whiteout_MdxTrackQuaternion whiteout_MdxTrackQuaternion;
typedef struct whiteout_MdxTrackU32 whiteout_MdxTrackU32;
/* ── MdxNode ─────────────────────────────────────────────── */

/* Base node in the model hierarchy */
/*  */
/* Nodes form the skeleton and attachment system of the model. Each node can have a parent creating a transformation hierarchy. Nodes can be: - Bones (for skeletal animation) - Helpers (attachment points) - Lights - Particle emitters - And other special objects */
/*  */
/* Nodes contain transformation animation tracks (translation, rotation, scaling). */
whiteout_MdxNode* whiteout_mdx_MdxNode_new(void);
void whiteout_mdx_MdxNode_delete(whiteout_MdxNode* self);
/* Node name (for debugging/reference) */
whiteout_CString whiteout_mdx_MdxNode_get_name(const whiteout_MdxNode* self);
void whiteout_mdx_MdxNode_set_name(whiteout_MdxNode* self, const char* value);
/* Unique ID for this node */
uint32_t whiteout_mdx_MdxNode_get_objectId(const whiteout_MdxNode* self);
void whiteout_mdx_MdxNode_set_objectId(whiteout_MdxNode* self, uint32_t value);
/* Parent node ID or NO_PARENT */
uint32_t whiteout_mdx_MdxNode_get_parentId(const whiteout_MdxNode* self);
void whiteout_mdx_MdxNode_set_parentId(whiteout_MdxNode* self, uint32_t value);
/* Combination of NodeFlag values */
int32_t whiteout_mdx_MdxNode_get_flags(const whiteout_MdxNode* self);
void whiteout_mdx_MdxNode_set_flags(whiteout_MdxNode* self, int32_t value);
/* Type of this node */
int32_t whiteout_mdx_MdxNode_get_type(const whiteout_MdxNode* self);
void whiteout_mdx_MdxNode_set_type(whiteout_MdxNode* self, int32_t value);
/* Used to link related nodes of the same type */
uint32_t whiteout_mdx_MdxNode_get_nodeFamilyId(const whiteout_MdxNode* self);
void whiteout_mdx_MdxNode_set_nodeFamilyId(whiteout_MdxNode* self, uint32_t value);
/* Position animation */
whiteout_MdxTrackVector3f* whiteout_mdx_MdxNode_get_translationTracks(whiteout_MdxNode* self);
void whiteout_mdx_MdxNode_set_translationTracks(whiteout_MdxNode* self, const whiteout_MdxTrackVector3f* value);
/* Rotation animation (quaternion XYZW) */
whiteout_MdxTrackQuaternion* whiteout_mdx_MdxNode_get_rotationTracks(whiteout_MdxNode* self);
void whiteout_mdx_MdxNode_set_rotationTracks(whiteout_MdxNode* self, const whiteout_MdxTrackQuaternion* value);
/* Scale animation */
whiteout_MdxTrackVector3f* whiteout_mdx_MdxNode_get_scalingTracks(whiteout_MdxNode* self);
void whiteout_mdx_MdxNode_set_scalingTracks(whiteout_MdxNode* self, const whiteout_MdxTrackVector3f* value);
/* ── MdxSoundEmitter ─────────────────────────────────────────────── */

/* Sound emitter attached to the model hierarchy (deprecated) */
/*  */
/* Sound emitters are positioned nodes that can emit sounds at specific animation frames via KSEK tracks. While readers exist in the internal game code, no known shipped model contains SNEM data. */
whiteout_MdxSoundEmitter* whiteout_mdx_MdxSoundEmitter_new(void);
void whiteout_mdx_MdxSoundEmitter_delete(whiteout_MdxSoundEmitter* self);
/* Base node data with transform */
whiteout_MdxNode* whiteout_mdx_MdxSoundEmitter_get_node(whiteout_MdxSoundEmitter* self);
void whiteout_mdx_MdxSoundEmitter_set_node(whiteout_MdxSoundEmitter* self, const whiteout_MdxNode* value);
/* KSEK - sound event track (u32 values) */
whiteout_MdxTrackU32* whiteout_mdx_MdxSoundEmitter_get_soundTrack(whiteout_MdxSoundEmitter* self);
void whiteout_mdx_MdxSoundEmitter_set_soundTrack(whiteout_MdxSoundEmitter* self, const whiteout_MdxTrackU32* value);