bindings/java/src/main/java/whiteout/mdx/internal/Native.java


    // -- MdxNode --
    public static final MethodHandle whiteout_mdx_MdxNode_new = find(
        "whiteout_mdx_MdxNode_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxNode_delete = find(
        "whiteout_mdx_MdxNode_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxNode_get_name = find("whiteout_mdx_MdxNode_get_name", FunctionDescriptor.of(CSTRING_LAYOUT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxNode_set_name = find("whiteout_mdx_MdxNode_set_name", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxNode_get_objectId = find("whiteout_mdx_MdxNode_get_objectId", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxNode_set_objectId = find("whiteout_mdx_MdxNode_set_objectId", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxNode_get_parentId = find("whiteout_mdx_MdxNode_get_parentId", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxNode_set_parentId = find("whiteout_mdx_MdxNode_set_parentId", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxNode_get_flags = find("whiteout_mdx_MdxNode_get_flags", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxNode_set_flags = find("whiteout_mdx_MdxNode_set_flags", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxNode_get_type = find("whiteout_mdx_MdxNode_get_type", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxNode_set_type = find("whiteout_mdx_MdxNode_set_type", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxNode_get_nodeFamilyId = find("whiteout_mdx_MdxNode_get_nodeFamilyId", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxNode_set_nodeFamilyId = find("whiteout_mdx_MdxNode_set_nodeFamilyId", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxNode_get_translationTracks = find("whiteout_mdx_MdxNode_get_translationTracks", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxNode_set_translationTracks = find("whiteout_mdx_MdxNode_set_translationTracks", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxNode_get_rotationTracks = find("whiteout_mdx_MdxNode_get_rotationTracks", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxNode_set_rotationTracks = find("whiteout_mdx_MdxNode_set_rotationTracks", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxNode_get_scalingTracks = find("whiteout_mdx_MdxNode_get_scalingTracks", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxNode_set_scalingTracks = find("whiteout_mdx_MdxNode_set_scalingTracks", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));

    // -- MdxSoundEmitter --
    public static final MethodHandle whiteout_mdx_MdxSoundEmitter_new = find(
        "whiteout_mdx_MdxSoundEmitter_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxSoundEmitter_delete = find(
        "whiteout_mdx_MdxSoundEmitter_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxSoundEmitter_get_node = find("whiteout_mdx_MdxSoundEmitter_get_node", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxSoundEmitter_set_node = find("whiteout_mdx_MdxSoundEmitter_set_node", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxSoundEmitter_get_soundTrack = find("whiteout_mdx_MdxSoundEmitter_get_soundTrack", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxSoundEmitter_set_soundTrack = find("whiteout_mdx_MdxSoundEmitter_set_soundTrack", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
